feat: complete random-quote section
Signed-off-by: sharifmdathar <116189751+sharifmdathar@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -57,7 +57,7 @@
           This is an inspiring quote, or a testimonial from a customer. Maybe
           it's just filling up space, or maybe people will actually read it. Who
           knows? All I know is that it looks nice.
-          <footer>— <cite>Lao Tzu</cite></footer>
+          <cite>-Thor, God of Thunder</cite>
         </blockquote>
       </section>
       <section class="call-to-action">
